--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ urls:
 author_logo: profile.png
 author: John Doe
 author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "johndoe@gmail.com"
+author_email: "xp.luiz@gmail.com"
 author_location: India
 author_website_url: "http://johndoe.com"
 typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
