--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ urls:
 
 # Edit these details
 
-author_logo: profile.png
-author: John Doe
+author_logo: profile.jpeg
+author: Luiz Leite Oliveira
 author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
 author_email: "xp.luiz@gmail.com"
 author_location: India
