--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ subtitle: A Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a Jekyll Theme Built For Developers
 
-url: "https://luizleite-hotmart.github.io/" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://luizleite-hotmart.github.io/pages" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "/pages" # the subpath of your site, e.g. /blog
 
 urls:
