--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Luiz Leite
-subtitle: A Jekyll Theme Built for Developers
+subtitle: Luiz Leite Website
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a Jekyll Theme Built For Developers
+  Luiz Leite website
 
 url: "https://luizleite-hotmart.github.io/" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "/pages" # the subpath of your site, e.g. /blog
@@ -20,7 +20,7 @@ urls:
 
 author_logo: profile.jpeg
 author: Luiz Leite Oliveira
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
+author_bio: Hi, my name is Luiz Leite. This is the site where I share some things
 author_email: "xp.luiz@gmail.com"
 author_location: Brazil
 author_website_url: "http://johndoe.com"
@@ -41,11 +41,9 @@ author_work_experiences:
               visibility: true
 
 author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
+              - college_logo: dcc_logo_2.jpg
+                college_name: DCC - UFMG
+                college_url: https://www.dcc.ufmg.br/dcc/
                 visibility: true
 
 author_project_details:
@@ -61,30 +59,23 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username: luizleite_
+github_username:  luizleite-hotmart
+linkedin_username: luizleiteoliveira
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
 # disqus_shortname: sujay-kundu
-hyvor_talk_website_id: 476
+#hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+#wakatime_username: sujaykundu777
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+#mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
-formspree_email: johndoe@gmail.com
+formspree_email: xp.luiz@gmail.com
 
 # syntax highlighter
 markdown: kramdown
