--- a/_config.yml
+++ b/_config.yml
@@ -27,36 +27,36 @@ author_website_url: "http://johndoe.com"
 typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
 
 author_work_experiences:
-            - company_name: Google
-              company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
+            - company_name: Hotmart
+              company_logo: hotmart.png
+              company_url: https://hotmart.com
+              designation: Team Leader/ Developer
+              description: It's too much time to add in one line
               visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
+            - company_name: Eteg
+              company_logo: eteg.png
+              company_url: https://www.eteg.com.br/
+              designation: Developer
+              description: Over the years in Eteg I worked with a lot of different system the main projects are from FHEMIG which I work on the payment system of them
               visibility: true
 
-author_education_details:
-              - college_logo: dcc_logo_2.jpg
-                college_name: DCC - UFMG
-                college_url: https://www.dcc.ufmg.br/dcc/
-                visibility: true
-
-author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
-                visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
-                visibility: true
+#author_education_details:
+#              - college_logo: dcc_logo_2.jpg
+#                college_name: DCC - UFMG
+#                college_url: https://www.dcc.ufmg.br/dcc/
+#                visibility: true
+#
+#author_project_details:
+#              - project_thumbnail: gamershub.png
+#                project_title: Gamers Hub
+#                project_description: A Platform built for Gamers and Game Devs
+#                project_url: https://gamershub.in
+#                visibility: true
+#              - project_thumbnail: hack4r.PNG
+#                project_title: Hack4r
+#                project_description: A Platform built for Hackers and Penetration Testers
+#                project_url: https://hack4r.com
+#                visibility: true
 
 # social links
 twitter_username: luizleite_
