--- a/_config.yml
+++ b/_config.yml
@@ -87,11 +87,11 @@ show_author_project_details: true
 
 # algolia search
 algolia:
-  application_id: D9WA1YKTRQ
+  application_id: ORDJ2KKMXS
   index_name: blog_posts # You can replace that with whatever name you want
   files_to_exclude: []
   nodes_to_index: 'article'
-  search_only_api_key: 58ffdd7cd6c45ec1577a7fcd789b1b9a
+  search_only_api_key: bcb74f96deb1754595614009c8adf8d0
 
 # pagination of posts
 paginate: 4
