--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ urls:
       url: /about
     - text: Blog
       url: /blog
-    - text: Contact Me
-      url : /contact
+#    - text: Contact Me
+#      url : /contact
 
 # Edit these details
 
